2026-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

2026-02-08  Michael Chirico <chiricom@google.com>

	* NAMESPACE: drop exists() check for R 3.0.0's utils::.DollarNames

2026-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Remove long-obsolete versioned Depends for R (>=
	3.0.0) and move 'methods' to 'Imports:'

2026-01-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.25

	* configure.ac: Idem
	* configure: Idem

	* src/Makevars.*: Remove (explicit) C++17 standard setter

	* vignettes/*: Re-rerendered, now uses Rcpp::asis as driver
	* DESCRIPTION: Add 'VignetteBuilder: Rcpp'
	* vignettes/rmd/RProtoBuf-paper.bib: Refreshed some references

	* .github/workflows/*.yaml: Switch to actions/checkout@v6

2026-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/rprotobuf.h: Include R_ext/ObjectTable.h under R 4.6.0 or later

2025-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Use r-ci with embedded bootstrap
	* .github/workflows/alpine.yaml: Switch to release 3.22

2025-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.24
	* configure.ac: Idem
	* configure: Idem

	* src/init.c: Set EnumValueDescriptor_name declaration to two args

2025-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/rprotobuf.h: Replace EXTPTR_PTR with R_ExternalPtrAddr
	* src/rprotobuf.cpp: Idem
	* src/mutators.cpp: Idem

2025-02-10  Mike Kruskal  <mkruskal@google.com>

	* R/00classes.R: Point to EnumValueDescriptor
	* src/init.c: Add bindings for EnumValueDescriptor::name

2025-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.23
	* configure.ac: Idem
	* configure: Idem

	* inst/NEWS.Rd: Update one URL

2025-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Correct three possible bashisms
	* configure: Regenerated
